@@ -1,5 +1,11 @@
 2007-02-10  Petr Mikulik  <mikulik@physics.muni.cz>
 
+	* src/command.c (pause_command): On Windows, wait for Enter in console
+	instead for a mouse click in a special window if the graph window is
+	not (yet) present.
+
+2007-02-10  Petr Mikulik  <mikulik@physics.muni.cz>
+
 	SF #1651350 win terminal: pause mouse key|any does not work
 
 	* src/mouse.c (event_keypress): Kill pending Pause dialog.
@@ -26,7 +32,7 @@
 	in front of the grid when splot_map is set.
 	Bug #1655001
 
-	* term/README:  Confusing typo in TERM_TABLE layout
+	* term/README:  Confusing typo in TERM_TABLE layout.
 
 2007-02-09  Petr Mikulik  <mikulik@physics.muni.cz>
 	* docs/gnuplot.doc: Add a dummy label for "3 data style" to avoid
